listo editar mi perfil y adicion de datos
se corrigió el modelo de usuarios, registro y editar mi informacion personal